removed material, fixed login button spacing

--- a/styles/log_reg.scss
+++ b/styles/log_reg.scss
@@ -5,7 +5,6 @@
 }
 
 main {
-  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
